refactor: factored out some more label code and cleaned up a bunch of mess.  Skinners please check your skins for any oddness.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27702 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/guilib.vcproj
+++ b/project/VS2008Express/guilib.vcproj
@@ -430,6 +430,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\guilib\GUILabel.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\guilib\GUILabelControl.cpp"
 				>
 			</File>
@@ -829,6 +833,10 @@
 			</File>
 			<File
 				RelativePath="..\..\guilib\GUIInfoTypes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\guilib\GUILabel.h"
 				>
 			</File>
 			<File
