merged: changes from trunk. revs: r27685:27713
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27715 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/guilib.vcproj
+++ b/project/VS2008Express/guilib.vcproj
@@ -434,6 +434,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\guilib\GUILabel.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\guilib\GUILabelControl.cpp"
 				>
 			</File>
@@ -837,6 +841,10 @@
 			</File>
 			<File
 				RelativePath="..\..\guilib\GUIInfoTypes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\guilib\GUILabel.h"
 				>
 			</File>
 			<File
