changed: ProjectM now creates a zip file inside addon folder from presets instead of copy files added: Blank directories for all types of visualizations moved: Current Win32 visualization files to the addon folders removed: Visualization folder in XBMC top directory
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27722 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/visualizations/XBMCProjectM/Makefile.in
+++ b/xbmc/visualizations/XBMCProjectM/Makefile.in
@@ -21,7 +21,7 @@ libprojectM/libprojectM.dylib:
 else
 $(SLIB): $(OBJS) libprojectM/libprojectM.so
 	$(CXX) $(CXXFLAGS) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared -o $(SLIB) $(OBJS) ../../addons/include/xbmc_addon_lib++.a `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
-	cp -rfT libprojectM/presets ../../../visualisations/projectM
+	zip -qj ../../../addons/visualizations/ProjectM/resources/presets.zip libprojectM/presets/*
 
 libprojectM/libprojectM.so: 
 	$(MAKE) -C libprojectM
