--- a/Makefile.in
+++ b/Makefile.in
@@ -31,7 +31,6 @@ BIN_DIRS=	\
 	xbmc/lib/cmyth/libcmyth \
 	xbmc/lib/cmyth/librefmem \
 	xbmc/lib/libhts \
-  xbmc/lib/libjsoncpp \
   xbmc/lib/libjsonrpc \
   xbmc/lib/libhttpapi \
 	xbmc/lib/libPython \
@@ -238,8 +237,8 @@ xbmc/lib/libXBMS/libxbms-@ARCH@.a: force
 	$(MAKE) -C xbmc/lib/libXBMS
 xbmc/lib/libXDAAP/libxdaap-@ARCH@.a: force
 	$(MAKE) -C xbmc/lib/libXDAAP
-xbmc/lib/libjsoncpp/libjsoncpp.a: force
-	$(MAKE) -C xbmc/lib/libjsoncpp
+lib/jsoncpp/jsoncpp/src/lib_json/libjsoncpp.a: force
+	$(MAKE) -C lib/jsoncpp/jsoncpp/src/lib_json
 xbmc/lib/libjsonrpc/libjsonrpc.a: force
 	$(MAKE) -C xbmc/lib/libjsonrpc
 xbmc/lib/libhttpapi/libhttpapi.a: force
@@ -355,7 +354,7 @@ xcode_depends: \
 	xbmc/lib/libXDAAP/libxdaap-@ARCH@.a \
 	xbmc/lib/libshout/libshout-@ARCH@.a \
   xbmc/lib/libjsonrpc/libjsonrpc.a \
-  xbmc/lib/libjsoncpp/libjsoncpp.a \
+  lib/jsoncpp/jsoncpp/src/lib_json.a \
   xbmc/lib/libhttpapi/libhttpapi.a
 
 # platform independend objects
@@ -397,7 +396,7 @@ OBJSXBMC=	\
 	xbmc/lib/libUPnP/libupnp-@ARCH@.a \
 	xbmc/lib/libXDAAP/libxdaap-@ARCH@.a \
   xbmc/lib/libjsonrpc/libjsonrpc.a \
-  xbmc/lib/libjsoncpp/libjsoncpp.a \
+  lib/jsoncpp/jsoncpp/src/lib_json/libjsoncpp.a \
   xbmc/lib/libhttpapi/libhttpapi.a \
 	xbmc/lib/sqLite/sqllite.a \
 	xbmc/lib/libsquish/libsquish-@ARCH@.a \
