fixed: build of goom visualization changed: Sync r27730 of addons-fwork branch
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27740 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/visualizations/Goom/Makefile.in
+++ b/xbmc/visualizations/Goom/Makefile.in
@@ -1,7 +1,8 @@
 ARCH=@ARCH@
 INCLUDES=-I. -I.. -I../../linux -I../../ -I../../../guilib -I../../../visualisations -Igoom2k4-0/src
 OBJS=Main.o
-SLIB=../../../visualisations/Goom.vis
+SLIB=../../../addons/visualizations/Goom/Goom.vis
+DEFINES+=-DHAS_SDL_OPENGL -DHAS_SDL
 CXXFLAGS=-fPIC
 DIRS=goom2k4-0
 
