[WIN32] further linker fixes and cosmetics
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27782 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -6866,6 +6866,22 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="jsoncpp"
+				>
+				<File
+					RelativePath="..\..\lib\jsoncpp\jsoncpp\src\lib_json\json_reader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\lib\jsoncpp\jsoncpp\src\lib_json\json_value.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\lib\jsoncpp\jsoncpp\src\lib_json\json_writer.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
