[osx] fixed make xcode_depends
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27796 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -315,6 +315,9 @@ if test "$host_vendor" != "apple" ; then
   if test "$use_webserver" = "yes"; then
     AC_CHECK_LIB([microhttpd],  [main],, AC_MSG_ERROR($missing_library))
   fi
+else
+  use_webserver="no"
+  AC_MSG_RESULT(Webserver disabled)
 fi
 
 
