[osx] fixed make build, missing file
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27872 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/osx/Makefile
+++ b/xbmc/osx/Makefile
@@ -16,7 +16,8 @@ SRCS = \
 	ZeroconfBrowserOSX.cpp \
 	WinSystemOSX.mm \
 	WinSystemOSXGL.mm \
-	SemaphoreDarwin.cpp
+	SemaphoreDarwin.cpp \
+	posix-realtime-stub.c
 	
 LIB=osx.a
 
