--- a/lib/libXBMC_addon/Makefile.in
+++ b/lib/libXBMC_addon/Makefile.in
@@ -15,5 +15,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 else
 	$(CXX) $(CFLAGS) -shared -g -o $(SLIB) $(OBJS)
 endif
+	@ln -sf $(SLIB) libXBMC_addon.so.0
+	@ln -sf $(SLIB) libXBMC_addon.so
 
 include ../../Makefile.include
