--- a/xbmc/lib/libPython/linux/Makefile.in
+++ b/xbmc/lib/libPython/linux/Makefile.in
@@ -38,18 +38,12 @@ endif
 
 PYDIRS=bsddb compiler curses distutils email encodings hotshot idlelib \
 	lib-old lib-tk logging site-packages xml
-ifeq ($(ARCH), x86-osx)
-	PYLIBDIR=lib.macosx-10.4-i386-2.4
-	PYDIRS+=plat-darwin
-	PYDIRS+=plat-mac
-else
-ifeq ($(ARCH), powerpc-osx)
-	PYLIBDIR=lib.macosx-10.4-ppc-2.4
+ifeq ($(findstring osx,$(ARCH)),osx)
+	PYLIBDIR=lib.macosx-10.4-@ARCHTYPE@-2.4
 	PYDIRS+=plat-darwin
 	PYDIRS+=plat-mac
 else
 	PYDIRS+=plat-linux2
-endif
 endif
 
 PY=$(wildcard ../Python/Lib/*.py)
