merged: changes from trunk. revs: r27882:27927
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27928 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -7090,6 +7090,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\lib\libjsonrpc\GUIOperations.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\lib\libjsonrpc\GUIOperations.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\lib\libjsonrpc\IClient.h"
 					>
 				</File>
