[DSPlayer]Last bugs fixed for external subtitles (with ffdshow). Added support for multiple filters based on selection rule like in playercoreconfig.xml Thanks to blinkeb
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@27954 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2626,6 +2626,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="FilterCoreFactory"
+					>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterSelectionRule.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterSelectionRule.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
