fixed: PVR recordings with stream url can't be played changed: Disabled use of zipped folder for ProjectM
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27961 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/visualizations/XBMCProjectM/Makefile.in
+++ b/xbmc/visualizations/XBMCProjectM/Makefile.in
@@ -23,7 +23,8 @@ libprojectM/libprojectM.dylib:
 else
 $(SLIB): $(OBJS) libprojectM/libprojectM.so
 	$(CXX) $(CXXFLAGS) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared -o $(SLIB) $(OBJS) $(LIBS) `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
-	zip -qj ../../../addons/visualizations/ProjectM/resources/presets.zip libprojectM/presets/*
+	cp -rfT libprojectM/presets ../../../addons/visualizations/ProjectM/presets
+#	zip -qj ../../../addons/visualizations/ProjectM/resources/presets.zip libprojectM/presets/*
 
 libprojectM/libprojectM.so: 
 	$(MAKE) -C libprojectM
