--- a/lib/libXBMC_pvr/Makefile.in
+++ b/lib/libXBMC_pvr/Makefile.in
@@ -17,7 +17,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 	$(CXX) -bundle -shared -flat_namespace -undefined suppress -o $(LIB_SHARED) $(OBJS)
 	../../tools/Mach5/wrapper.rb $@;mv output.so $@
 else
-	$(CXX) $(CFLAGS) -shared -g -o $(LIB_SHARED) $(OBJS)
+	$(CXX) $(CFLAGS) -shared -Wl,-soname,$(LIBNAME).so.0 -g -o $(LIB_SHARED) $(OBJS)
 endif
 	@ln -sf $(LIB_SHARED) $(LIBNAME).so.0
 	@ln -sf $(LIB_SHARED) $(LIBNAME).so
