fixed: Add new sources to makefile
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/hi-phi-audio@28037 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -33,6 +33,7 @@ SRCS=AlarmClock.cpp \
      CPUInfo.cpp \
      PCMAmplifier.cpp \
      PCMRemap.cpp \
+     PCMSampleConverter.cpp \
      LabelFormatter.cpp \
      Network.cpp \
      BitstreamStats.cpp \
