fixed: strvercmp not known under osx changed: Taken Win32 build files trunk and setting up from scratch fixed: Build of "XBMC" target under Win32 (the other parts not fixed now)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28044 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/osx/Makefile
+++ b/xbmc/osx/Makefile
@@ -17,7 +17,8 @@ SRCS = \
 	WinSystemOSX.mm \
 	WinSystemOSXGL.mm \
 	SemaphoreDarwin.cpp \
-	posix-realtime-stub.c
+	posix-realtime-stub.c \
+	strverscmp.cpp
 	
 LIB=osx.a
 
