--- a/xbmc/pvrclients/vdr-streamdev/Makefile.in
+++ b/xbmc/pvrclients/vdr-streamdev/Makefile.in
@@ -24,6 +24,7 @@ CFLAGS   ?= -g -O2 -Wall
 CXX      ?= g++
 ifeq ($(findstring Darwin,$(shell uname -a)), Darwin)
 CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -Wno-parentheses -dynamiclib -single_module -undefined dynamic_lookup
+DEFINES += -D__APPLE__
 else
 CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -Wno-parentheses
 endif
@@ -31,6 +32,9 @@ endif
 -include Make.config
 
 OBJS = client.o vtptransceiver.o timers.o channels.o recordings.o epg.o tools.o thread.o ringbuffer.o select.o
+ifeq ($(findstring Darwin,$(shell uname -a)), Darwin)
+OBJS += getline.o
+endif
 
 all: pvrVDR
 
