changed: Use "realpath" instead of canonicalize_file_name and enable it for OSX removed: strverscmp.cpp and added it to OSXGNUReplacements.c changed: VDR Client use OSXGNUReplacements.h now for some missing functions moved: getline.* of VDR client to windows subdirectory updated: OSX Build file (thanks to TheChief from German VDR Portal)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28096 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
+++ b/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
@@ -210,7 +210,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\getline.cpp"
+				RelativePath="..\..\windows\getline.cpp"
 				>
 			</File>
 			<File
@@ -268,7 +268,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\getline.h"
+				RelativePath="..\..\windows\getline.h"
 				>
 			</File>
 			<File
